
========== 2.02-rc1 STARTS [10 Feb 2021]

plugin.py
    Implemented a loop over Google translate calls using the
    PART_translate() function to overcome any ~7500 character limit.
    DO_translation() now unzips for call to this then stitches things
    back up, as required.
    No longer distinguish URLError, HTTPError and socket errors. An
    error is now just a failure to translate.
    Updated version tag to 2.02-rc1

plugin.py
    Add code to ignore props with rtol text to My_setEvent() lookups as
    well.

plugin.py
    Don't unquote() the translated text - it isn't quote()d.
    If an EPG translation doesn't start with sepline there has been a
    problem, so handle it accordingly.

Skin_medium.py
Skin_small.py
plugin.py
    Make icon locations relative to the script, rather than hardwiring
    full pathnames.

plugin.py
    For a playback, set the begin time to when the programme started
    during playback (rather than None).

Skin_medium.py
Skin_small.py
plugin.py
    Add an option to display a traceback of an error during translation,
    rather than just the description.
    Fixed up skins for this (and fixed Skin_small layout).

plugin.py
    Change config.x.x.value usage to config.x.x.getValue(). OpenPLi
    make config.epg.histminutes.value a str, not an int.

plugin.py
    Just strip-copy the English base_helptext into helptext.
    Change the "timing" heading for a manual text translation to note it
    is a translation - not related to the current event timing.

plugin.py
    Added an EPGdata_translate() function to handle the common
    translating code in translateEPG() and My_setEvent().
    Removed get_translation() from translatorMain class and just use
    DO_translation() directly.
    In getEPG() get as much info for a playback as we can, including the
    getEventId, which is usually there.
    Save two start times for a playback.  The original recording time
    (for display) and the starting playback time (for cacheing).